# covid19radiocv

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.chglog/: config.yml
.github/actions/k8s-deploy-action/: action.yml
.github/workflows/: lint_and_test.yml  tag_and_deploy.yml
src/: main.py
src/utils/: dicom_utils.py  draw_utils.py
